gcc/testsuite/rust/rustc/ui/parser/raw/raw-str-unbalanced.rs
static s: &'static str =
    r#"
      "## // { dg-error "" "" { target *-*-* } }
;

